User profile, edit endpoint
