# backend/Application/Features/Users/Commands/CheckOrAddUser/UserDto.cs
@@ -3,4 +3,6 @@ public class UserDto
 {
     public required int Id { get; set; }
     public required string Email { get; set; }
+    public string? FullName { get; set; }
+    public string? PhoneNumber { get; set; }
 }
