# backend/Application/Features/Users/Commands/EditUser/EditUserDto.cs
@@ -1,0 +1,7 @@
+﻿namespace Application.Features.Users.Commands.EditUser;
+public class EditUserDto
+{
+    public required string Email { get; set; }
+    public string? Fullname { get; set; }
+    public string? PhoneNumber { get; set; }
+}
